<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0d141a">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/txtexpee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expectede"
            android:fontFamily="@font/helveticamedium"
            android:layout_marginLeft="@dimen/scale_20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/scale_20dp"/>

        <!--Daily Earning-->
        <LinearLayout
            android:id="@+id/lldaily"
            android:layout_below="@+id/txtexpee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/scale_20dp">

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="50dp"

                android:layout_marginLeft="@dimen/scale_20dp"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/scale_20dp"
                app:cardCornerRadius="@dimen/scale_20dp">

                <TextView
                    android:id="@+id/txtmdaily"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticabold"
                    android:gravity="center"
                    android:text="10000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/scale_20dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/lltxtdaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:id="@+id/txtdaily"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/helveticalight"
                android:gravity="left"
                android:layout_marginLeft="@dimen/scale_20dp"
                android:text="@string/DaliyEarning"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txtdailydesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/helveticalight"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:text="@string/dailytext"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="normal" />
        </LinearLayout>
        </LinearLayout>

        <!--Weekly Earnings-->
        <LinearLayout
            android:id="@+id/llweekly"
            android:layout_below="@+id/lldaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/scale_20dp"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/scale_20dp"
                app:cardCornerRadius="@dimen/scale_20dp">

                <TextView
                    android:id="@+id/txtmweekly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticabold"
                    android:gravity="center"
                    android:text="10000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/scale_20dp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/lltxtweekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">
                <TextView
                    android:id="@+id/txtweekly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticalight"
                    android:gravity="left"
                    android:layout_marginLeft="@dimen/scale_20dp"
                    android:text="@string/WeekEarning"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="normal"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtweekdesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticalight"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    android:text="@string/weektext"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <!--Montly Earnings-->
        <LinearLayout
            android:id="@+id/llmonth"
            android:layout_below="@+id/llweekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/scale_20dp">

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/scale_20dp"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/scale_20dp"
                app:cardCornerRadius="@dimen/scale_20dp">

                <TextView
                    android:id="@+id/txtmmonthly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticabold"
                    android:gravity="center"
                    android:text="10000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/scale_20dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/lltxtmonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txmonthly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticalight"
                    android:gravity="left"
                    android:layout_marginLeft="@dimen/scale_20dp"
                    android:text="@string/MontlyEarning"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtmonthdesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/helveticalight"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    android:text="@string/monthtext"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>